// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MedicalPrescriptionDueDateBar component when payment info is expired should match the snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
    forwardedRef={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "backgroundColor": "#eee",
        "flex": 1,
        "flexDirection": "column-reverse",
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        forwardedRef={[Function]}
        pointerEvents="none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 1000000,
              },
              Object {
                "translateY": 1000000,
              },
            ],
          }
        }
      >
        <View
          accessibilityElementsHidden={true}
          style={
            Object {
              "backgroundColor": "#fff",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        forwardedRef={[Function]}
        pointerEvents="box-only"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          style={
            Object {
              "backgroundColor": "#fff",
              "flex": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {},
                Object {
                  "paddingHorizontal": 24,
                  "paddingVertical": 12,
                },
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                Object {
                  "backgroundColor": "#475A6D",
                },
              ]
            }
            testID="MedicalPrescriptionDueDate_expired_or_expiring"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={40}
              bbWidth={40}
              focusable={false}
              height={40}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "flex": 0,
                    "height": 40,
                    "width": 40,
                  },
                ]
              }
              vbHeight={40}
              vbWidth={40}
              width={40}
            >
              <RNSVGGroup>
                <RNSVGGroup
                  name="calendar"
                >
                  <RNSVGPath
                    d="m 33,0 h 3 c 2.209139,0 4,1.790861 4,4 v 32 c 0,2.209139 -1.790861,4 -4,4 H 4 C 1.790861,40 0,38.209139 0,36 V 4 C 0,1.790861 1.790861,0 4,0 h 3 v 3 h 4 V 0 h 18 v 3 h 4 z"
                    fill={4294967295}
                    name="icon"
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGText
                    alignmentBaseline="central"
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={4282866285}
                    font={
                      Object {
                        "fontSize": 10,
                        "textAnchor": "middle",
                      }
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        "50%",
                      ]
                    }
                    y={
                      Array [
                        "30%",
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="Dec"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    alignmentBaseline="central"
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={4282866285}
                    font={
                      Object {
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAnchor": "middle",
                      }
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        "50%",
                      ]
                    }
                    y={
                      Array [
                        "65%",
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="01"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                </RNSVGGroup>
              </RNSVGGroup>
            </RNSVGSvgView>
            <View
              hspacer={true}
              small={true}
              style={Object {}}
            />
            <Text
              style={
                Array [
                  Object {
                    "color": "#000",
                    "fontFamily": "System",
                    "fontSize": 16,
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
              white={true}
            >
              The prescription expired at
              <Text
                bold={true}
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "System",
                    "fontSize": 16,
                  }
                }
                white={true}
              >
                 13.29 
              </Text>
              on
              <Text
                bold={true}
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "System",
                    "fontSize": 16,
                  }
                }
                white={true}
              >
                 12/01/2021
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MedicalPrescriptionDueDateBar component when payment info is expiring should match the snapshot 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                MESSAGE_DETAIL
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#FFFFFF",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        onLayout={[Function]}
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <View
                          pointerEvents="box-none"
                          style={
                            Object {
                              "bottom": 0,
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            style={
                              Object {
                                "opacity": 1,
                              }
                            }
                          />
                          <View
                            accessibilityElementsHidden={false}
                            closing={false}
                            gestureVelocityImpact={0.3}
                            importantForAccessibility="auto"
                            onClose={[Function]}
                            onGestureBegin={[Function]}
                            onGestureCanceled={[Function]}
                            onGestureEnd={[Function]}
                            onOpen={[Function]}
                            onTransition={[Function]}
                            pointerEvents="box-none"
                            style={
                              Array [
                                Object {
                                  "overflow": undefined,
                                },
                                Object {
                                  "bottom": 0,
                                  "left": 0,
                                  "position": "absolute",
                                  "right": 0,
                                  "top": 0,
                                },
                              ]
                            }
                            transitionSpec={
                              Object {
                                "close": Object {
                                  "animation": "spring",
                                  "config": Object {
                                    "damping": 500,
                                    "mass": 3,
                                    "overshootClamping": true,
                                    "restDisplacementThreshold": 10,
                                    "restSpeedThreshold": 10,
                                    "stiffness": 1000,
                                  },
                                },
                                "open": Object {
                                  "animation": "spring",
                                  "config": Object {
                                    "damping": 500,
                                    "mass": 3,
                                    "overshootClamping": true,
                                    "restDisplacementThreshold": 10,
                                    "restSpeedThreshold": 10,
                                    "stiffness": 1000,
                                  },
                                },
                              }
                            }
                          >
                            <View
                              needsOffscreenAlphaCompositing={false}
                              pointerEvents="box-none"
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                collapsable={false}
                                forwardedRef={[Function]}
                                onGestureHandlerEvent={[Function]}
                                onGestureHandlerStateChange={[Function]}
                                style={
                                  Object {
                                    "flex": 1,
                                    "transform": Array [
                                      Object {
                                        "translateX": 0,
                                      },
                                      Object {
                                        "translateX": 0,
                                      },
                                    ],
                                  }
                                }
                              >
                                <View
                                  pointerEvents="none"
                                  style={
                                    Object {
                                      "backgroundColor": "#FFFFFF",
                                      "bottom": 0,
                                      "left": 0,
                                      "position": "absolute",
                                      "shadowColor": "#000",
                                      "shadowOffset": Object {
                                        "height": 1,
                                        "width": -1,
                                      },
                                      "shadowOpacity": 0.3,
                                      "shadowRadius": 5,
                                      "top": 0,
                                      "width": 3,
                                    }
                                  }
                                />
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "flex": 1,
                                        "overflow": "hidden",
                                      },
                                      Array [
                                        Object {
                                          "backgroundColor": "#FFFFFF",
                                        },
                                        undefined,
                                      ],
                                    ]
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "flex": 1,
                                        "flexDirection": "column-reverse",
                                      }
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "flex": 1,
                                        }
                                      }
                                    >
                                      <View
                                        style={
                                          Array [
                                            Object {},
                                            Object {
                                              "paddingHorizontal": 24,
                                              "paddingVertical": 12,
                                            },
                                            Object {
                                              "alignItems": "center",
                                              "flexDirection": "row",
                                            },
                                            Object {
                                              "backgroundColor": "#D0021B",
                                            },
                                          ]
                                        }
                                        testID="MedicalPrescriptionDueDate_expired_or_expiring"
                                      >
                                        <RNSVGSvgView
                                          align="xMidYMid"
                                          bbHeight={40}
                                          bbWidth={40}
                                          focusable={false}
                                          height={40}
                                          meetOrSlice={0}
                                          minX={0}
                                          minY={0}
                                          style={
                                            Array [
                                              Object {
                                                "backgroundColor": "transparent",
                                                "borderWidth": 0,
                                              },
                                              Object {
                                                "flex": 0,
                                                "height": 40,
                                                "width": 40,
                                              },
                                            ]
                                          }
                                          vbHeight={40}
                                          vbWidth={40}
                                          width={40}
                                        >
                                          <RNSVGGroup>
                                            <RNSVGGroup
                                              name="calendar"
                                            >
                                              <RNSVGPath
                                                d="m 33,0 h 3 c 2.209139,0 4,1.790861 4,4 v 32 c 0,2.209139 -1.790861,4 -4,4 H 4 C 1.790861,40 0,38.209139 0,36 V 4 C 0,1.790861 1.790861,0 4,0 h 3 v 3 h 4 V 0 h 18 v 3 h 4 z"
                                                fill={4294967295}
                                                name="icon"
                                                propList={
                                                  Array [
                                                    "fill",
                                                  ]
                                                }
                                              />
                                              <RNSVGText
                                                alignmentBaseline="central"
                                                content={null}
                                                dx={Array []}
                                                dy={Array []}
                                                fill={4291822107}
                                                font={
                                                  Object {
                                                    "fontSize": 10,
                                                    "textAnchor": "middle",
                                                  }
                                                }
                                                propList={
                                                  Array [
                                                    "fill",
                                                  ]
                                                }
                                                rotate={Array []}
                                                x={
                                                  Array [
                                                    "50%",
                                                  ]
                                                }
                                                y={
                                                  Array [
                                                    "30%",
                                                  ]
                                                }
                                              >
                                                <RNSVGTSpan
                                                  content="Dec"
                                                  dx={Array []}
                                                  dy={Array []}
                                                  font={Object {}}
                                                  rotate={Array []}
                                                  x={Array []}
                                                  y={Array []}
                                                />
                                              </RNSVGText>
                                              <RNSVGText
                                                alignmentBaseline="central"
                                                content={null}
                                                dx={Array []}
                                                dy={Array []}
                                                fill={4291822107}
                                                font={
                                                  Object {
                                                    "fontSize": 18,
                                                    "fontWeight": "bold",
                                                    "textAnchor": "middle",
                                                  }
                                                }
                                                propList={
                                                  Array [
                                                    "fill",
                                                  ]
                                                }
                                                rotate={Array []}
                                                x={
                                                  Array [
                                                    "50%",
                                                  ]
                                                }
                                                y={
                                                  Array [
                                                    "65%",
                                                  ]
                                                }
                                              >
                                                <RNSVGTSpan
                                                  content="01"
                                                  dx={Array []}
                                                  dy={Array []}
                                                  font={Object {}}
                                                  rotate={Array []}
                                                  x={Array []}
                                                  y={Array []}
                                                />
                                              </RNSVGText>
                                            </RNSVGGroup>
                                          </RNSVGGroup>
                                        </RNSVGSvgView>
                                        <View
                                          hspacer={true}
                                          small={true}
                                          style={Object {}}
                                        />
                                        <Text
                                          style={
                                            Array [
                                              Object {
                                                "color": "#000",
                                                "fontFamily": "System",
                                                "fontSize": 16,
                                              },
                                              Object {
                                                "flex": 1,
                                              },
                                            ]
                                          }
                                          white={true}
                                        >
                                          This prescription expires today
                                        </Text>
                                      </View>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`MedicalPrescriptionDueDateBar component when payment info is not expirable should match the snapshot 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                MESSAGE_DETAIL
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#FFFFFF",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        onLayout={[Function]}
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <View
                          pointerEvents="box-none"
                          style={
                            Object {
                              "bottom": 0,
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            style={
                              Object {
                                "opacity": 1,
                              }
                            }
                          />
                          <View
                            accessibilityElementsHidden={false}
                            closing={false}
                            gestureVelocityImpact={0.3}
                            importantForAccessibility="auto"
                            onClose={[Function]}
                            onGestureBegin={[Function]}
                            onGestureCanceled={[Function]}
                            onGestureEnd={[Function]}
                            onOpen={[Function]}
                            onTransition={[Function]}
                            pointerEvents="box-none"
                            style={
                              Array [
                                Object {
                                  "overflow": undefined,
                                },
                                Object {
                                  "bottom": 0,
                                  "left": 0,
                                  "position": "absolute",
                                  "right": 0,
                                  "top": 0,
                                },
                              ]
                            }
                            transitionSpec={
                              Object {
                                "close": Object {
                                  "animation": "spring",
                                  "config": Object {
                                    "damping": 500,
                                    "mass": 3,
                                    "overshootClamping": true,
                                    "restDisplacementThreshold": 10,
                                    "restSpeedThreshold": 10,
                                    "stiffness": 1000,
                                  },
                                },
                                "open": Object {
                                  "animation": "spring",
                                  "config": Object {
                                    "damping": 500,
                                    "mass": 3,
                                    "overshootClamping": true,
                                    "restDisplacementThreshold": 10,
                                    "restSpeedThreshold": 10,
                                    "stiffness": 1000,
                                  },
                                },
                              }
                            }
                          >
                            <View
                              needsOffscreenAlphaCompositing={false}
                              pointerEvents="box-none"
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                collapsable={false}
                                forwardedRef={[Function]}
                                onGestureHandlerEvent={[Function]}
                                onGestureHandlerStateChange={[Function]}
                                style={
                                  Object {
                                    "flex": 1,
                                    "transform": Array [
                                      Object {
                                        "translateX": 0,
                                      },
                                      Object {
                                        "translateX": 0,
                                      },
                                    ],
                                  }
                                }
                              >
                                <View
                                  pointerEvents="none"
                                  style={
                                    Object {
                                      "backgroundColor": "#FFFFFF",
                                      "bottom": 0,
                                      "left": 0,
                                      "position": "absolute",
                                      "shadowColor": "#000",
                                      "shadowOffset": Object {
                                        "height": 1,
                                        "width": -1,
                                      },
                                      "shadowOpacity": 0.3,
                                      "shadowRadius": 5,
                                      "top": 0,
                                      "width": 3,
                                    }
                                  }
                                />
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "flex": 1,
                                        "overflow": "hidden",
                                      },
                                      Array [
                                        Object {
                                          "backgroundColor": "#FFFFFF",
                                        },
                                        undefined,
                                      ],
                                    ]
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "flex": 1,
                                        "flexDirection": "column-reverse",
                                      }
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "flex": 1,
                                        }
                                      }
                                    >
                                      <View
                                        style={
                                          Array [
                                            Object {},
                                            Object {
                                              "paddingHorizontal": 24,
                                              "paddingVertical": 12,
                                            },
                                            Object {
                                              "backgroundColor": "#F5F6F7",
                                            },
                                          ]
                                        }
                                        testID="MedicalPrescriptionDueDate_valid"
                                      >
                                        <Text
                                          style={
                                            Array [
                                              Object {
                                                "color": "#000",
                                                "fontFamily": "System",
                                                "fontSize": 16,
                                              },
                                              Object {
                                                "flex": 1,
                                              },
                                            ]
                                          }
                                          white={false}
                                        >
                                          This prescription expires the
                                          <Text
                                            bold={true}
                                            style={
                                              Object {
                                                "color": "#000",
                                                "fontFamily": "System",
                                                "fontSize": 16,
                                              }
                                            }
                                          >
                                             12/01/2021
                                          </Text>
                                        </Text>
                                        <View
                                          spacer={true}
                                          style={Object {}}
                                          xsmall={true}
                                        />
                                        <View
                                          style={
                                            Array [
                                              Object {},
                                              Object {
                                                "alignItems": "center",
                                                "flexDirection": "row",
                                              },
                                            ]
                                          }
                                        >
                                          <RNSVGSvgView
                                            align="xMidYMid"
                                            bbHeight={40}
                                            bbWidth={40}
                                            focusable={false}
                                            height={40}
                                            meetOrSlice={0}
                                            minX={0}
                                            minY={0}
                                            style={
                                              Array [
                                                Object {
                                                  "backgroundColor": "transparent",
                                                  "borderWidth": 0,
                                                },
                                                Object {
                                                  "flex": 0,
                                                  "height": 40,
                                                  "width": 40,
                                                },
                                              ]
                                            }
                                            vbHeight={40}
                                            vbWidth={40}
                                            width={40}
                                          >
                                            <RNSVGGroup>
                                              <RNSVGGroup
                                                name="calendar"
                                              >
                                                <RNSVGPath
                                                  d="m 33,0 h 3 c 2.209139,0 4,1.790861 4,4 v 32 c 0,2.209139 -1.790861,4 -4,4 H 4 C 1.790861,40 0,38.209139 0,36 V 4 C 0,1.790861 1.790861,0 4,0 h 3 v 3 h 4 V 0 h 18 v 3 h 4 z"
                                                  fill={4282866285}
                                                  name="icon"
                                                  propList={
                                                    Array [
                                                      "fill",
                                                    ]
                                                  }
                                                />
                                                <RNSVGText
                                                  alignmentBaseline="central"
                                                  content={null}
                                                  dx={Array []}
                                                  dy={Array []}
                                                  fill={4294967295}
                                                  font={
                                                    Object {
                                                      "fontSize": 10,
                                                      "textAnchor": "middle",
                                                    }
                                                  }
                                                  propList={
                                                    Array [
                                                      "fill",
                                                    ]
                                                  }
                                                  rotate={Array []}
                                                  x={
                                                    Array [
                                                      "50%",
                                                    ]
                                                  }
                                                  y={
                                                    Array [
                                                      "30%",
                                                    ]
                                                  }
                                                >
                                                  <RNSVGTSpan
                                                    content="Dec"
                                                    dx={Array []}
                                                    dy={Array []}
                                                    font={Object {}}
                                                    rotate={Array []}
                                                    x={Array []}
                                                    y={Array []}
                                                  />
                                                </RNSVGText>
                                                <RNSVGText
                                                  alignmentBaseline="central"
                                                  content={null}
                                                  dx={Array []}
                                                  dy={Array []}
                                                  fill={4294967295}
                                                  font={
                                                    Object {
                                                      "fontSize": 18,
                                                      "fontWeight": "bold",
                                                      "textAnchor": "middle",
                                                    }
                                                  }
                                                  propList={
                                                    Array [
                                                      "fill",
                                                    ]
                                                  }
                                                  rotate={Array []}
                                                  x={
                                                    Array [
                                                      "50%",
                                                    ]
                                                  }
                                                  y={
                                                    Array [
                                                      "65%",
                                                    ]
                                                  }
                                                >
                                                  <RNSVGTSpan
                                                    content="01"
                                                    dx={Array []}
                                                    dy={Array []}
                                                    font={Object {}}
                                                    rotate={Array []}
                                                    x={Array []}
                                                    y={Array []}
                                                  />
                                                </RNSVGText>
                                              </RNSVGGroup>
                                            </RNSVGGroup>
                                          </RNSVGSvgView>
                                          <View
                                            hspacer={true}
                                            small={true}
                                            style={Object {}}
                                          />
                                          <View
                                            accessibilityRole="button"
                                            accessibilityState={
                                              Object {
                                                "disabled": undefined,
                                              }
                                            }
                                            accessible={true}
                                            focusable={true}
                                            forwardedRef={[Function]}
                                            hitSlop={
                                              Object {
                                                "bottom": 5,
                                                "top": 5,
                                              }
                                            }
                                            onClick={[Function]}
                                            onResponderGrant={[Function]}
                                            onResponderMove={[Function]}
                                            onResponderRelease={[Function]}
                                            onResponderTerminate={[Function]}
                                            onResponderTerminationRequest={[Function]}
                                            onStartShouldSetResponder={[Function]}
                                            style={
                                              Object {
                                                "alignItems": "center",
                                                "alignSelf": "flex-start",
                                                "backgroundColor": "transparent",
                                                "borderBottomWidth": 1,
                                                "borderColor": "#007aff",
                                                "borderLeftWidth": 1,
                                                "borderRadius": 5,
                                                "borderRightWidth": 1,
                                                "borderTopWidth": 1,
                                                "borderWidth": 1,
                                                "elevation": null,
                                                "flex": 1,
                                                "flexDirection": "row",
                                                "height": 30,
                                                "justifyContent": "space-between",
                                                "opacity": 1,
                                                "paddingBottom": 6,
                                                "paddingTop": 6,
                                                "shadowColor": null,
                                                "shadowOffset": null,
                                                "shadowOpacity": null,
                                                "shadowRadius": null,
                                              }
                                            }
                                          >
                                            <Text
                                              accessibilityElementsHidden={true}
                                              accessibilityLabel=""
                                              accessible={false}
                                              allowFontScaling={false}
                                              importantForAccessibility="no-hide-descendants"
                                              style={
                                                Array [
                                                  Object {
                                                    "color": undefined,
                                                    "fontSize": 12,
                                                  },
                                                  Array [
                                                    Object {},
                                                    Object {},
                                                    Object {},
                                                  ],
                                                  Object {
                                                    "fontFamily": "io-icon-font",
                                                    "fontStyle": "normal",
                                                    "fontWeight": "normal",
                                                  },
                                                  Object {},
                                                ]
                                              }
                                            >
                                              $
                                            </Text>
                                            <Text
                                              style={
                                                Array [
                                                  Object {
                                                    "backgroundColor": "transparent",
                                                    "color": "#007aff",
                                                    "fontFamily": "System",
                                                    "fontSize": 14,
                                                    "marginLeft": 0,
                                                    "marginRight": 0,
                                                    "paddingLeft": 16,
                                                    "paddingRight": 16,
                                                  },
                                                  Object {
                                                    "marginTop": 1,
                                                  },
                                                ]
                                              }
                                            >
                                              Reminder
                                            </Text>
                                          </View>
                                        </View>
                                      </View>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`MedicalPrescriptionDueDateBar component when payment info is valid should match the snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
    forwardedRef={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "backgroundColor": "#eee",
        "flex": 1,
        "flexDirection": "column-reverse",
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        forwardedRef={[Function]}
        pointerEvents="none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 1000000,
              },
              Object {
                "translateY": 1000000,
              },
            ],
          }
        }
      >
        <View
          accessibilityElementsHidden={true}
          style={
            Object {
              "backgroundColor": "#fff",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        forwardedRef={[Function]}
        pointerEvents="box-only"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          style={
            Object {
              "backgroundColor": "#fff",
              "flex": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {},
                Object {
                  "paddingHorizontal": 24,
                  "paddingVertical": 12,
                },
                Object {
                  "backgroundColor": "#F5F6F7",
                },
              ]
            }
            testID="MedicalPrescriptionDueDate_valid"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#000",
                    "fontFamily": "System",
                    "fontSize": 16,
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
              white={false}
            >
              This prescription expires the
              <Text
                bold={true}
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "System",
                    "fontSize": 16,
                  }
                }
              >
                 12/01/2021
              </Text>
            </Text>
            <View
              spacer={true}
              style={Object {}}
              xsmall={true}
            />
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={40}
                bbWidth={40}
                focusable={false}
                height={40}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
                vbHeight={40}
                vbWidth={40}
                width={40}
              >
                <RNSVGGroup>
                  <RNSVGGroup
                    name="calendar"
                  >
                    <RNSVGPath
                      d="m 33,0 h 3 c 2.209139,0 4,1.790861 4,4 v 32 c 0,2.209139 -1.790861,4 -4,4 H 4 C 1.790861,40 0,38.209139 0,36 V 4 C 0,1.790861 1.790861,0 4,0 h 3 v 3 h 4 V 0 h 18 v 3 h 4 z"
                      fill={4282866285}
                      name="icon"
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGText
                      alignmentBaseline="central"
                      content={null}
                      dx={Array []}
                      dy={Array []}
                      fill={4294967295}
                      font={
                        Object {
                          "fontSize": 10,
                          "textAnchor": "middle",
                        }
                      }
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                      rotate={Array []}
                      x={
                        Array [
                          "50%",
                        ]
                      }
                      y={
                        Array [
                          "30%",
                        ]
                      }
                    >
                      <RNSVGTSpan
                        content="Dec"
                        dx={Array []}
                        dy={Array []}
                        font={Object {}}
                        rotate={Array []}
                        x={Array []}
                        y={Array []}
                      />
                    </RNSVGText>
                    <RNSVGText
                      alignmentBaseline="central"
                      content={null}
                      dx={Array []}
                      dy={Array []}
                      fill={4294967295}
                      font={
                        Object {
                          "fontSize": 18,
                          "fontWeight": "bold",
                          "textAnchor": "middle",
                        }
                      }
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                      rotate={Array []}
                      x={
                        Array [
                          "50%",
                        ]
                      }
                      y={
                        Array [
                          "65%",
                        ]
                      }
                    >
                      <RNSVGTSpan
                        content="01"
                        dx={Array []}
                        dy={Array []}
                        font={Object {}}
                        rotate={Array []}
                        x={Array []}
                        y={Array []}
                      />
                    </RNSVGText>
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
              <View
                hspacer={true}
                small={true}
                style={Object {}}
              />
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "disabled": undefined,
                  }
                }
                accessible={true}
                focusable={true}
                forwardedRef={[Function]}
                hitSlop={
                  Object {
                    "bottom": 5,
                    "top": 5,
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "transparent",
                    "borderBottomWidth": 1,
                    "borderColor": "#007aff",
                    "borderLeftWidth": 1,
                    "borderRadius": 5,
                    "borderRightWidth": 1,
                    "borderTopWidth": 1,
                    "borderWidth": 1,
                    "elevation": null,
                    "flex": 1,
                    "flexDirection": "row",
                    "height": 30,
                    "justifyContent": "space-between",
                    "opacity": 1,
                    "paddingBottom": 6,
                    "paddingTop": 6,
                    "shadowColor": null,
                    "shadowOffset": null,
                    "shadowOpacity": null,
                    "shadowRadius": null,
                  }
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  accessibilityLabel=""
                  accessible={false}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 12,
                      },
                      Array [
                        Object {},
                        Object {},
                        Object {},
                      ],
                      Object {
                        "fontFamily": "io-icon-font",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  $
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#007aff",
                        "fontFamily": "System",
                        "fontSize": 14,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                      },
                      Object {
                        "marginTop": 1,
                      },
                    ]
                  }
                >
                  Reminder
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
